--- a/post2.html
+++ b/post2.html
@@ -75,14 +75,14 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-          <p>Nowdays it is very popular that, starting from computer aided drug desgin, or virtual screening that one can easily got a lot "hit" compounds towards a 
-certain target of interest. For example, the current SARS-COV-2 relatied protein targets. However, for those chemists who just stepped into or try to step 
+         <p> Nowadays it is very popular that, starting from computer-aided drug design, or virtual screening that one can easily get a lot of "hit" compounds towards a 
+certain target of interest. For example, the current SARS-COV-2 related protein targets. However, for those chemists who just stepped into or try to step 
 into this zone, it is always good to be reminded that even you already defined rules like "rule of five" in the screening procedure, there are a class of 
-infamous compounds called "Pan-assay Inteference Compounds" or "PAINS" compunds, which has been found would be "postive" in many in vitro assays, but they are
-non-selective, binding to a lot protein targets. You want to remove these compounds at early stage of the drug development, before wasting a lot time and resources on this "false posotive" hit.<p/>
-
+infamous compounds called "Pan-assay Interference Compounds" or "PAINS" compounds, which has been found would be "positive" in many in vitro assays, but they are
+non-selective, binding to a lot of protein targets. You want to remove these compounds at an early stage of the drug development, before wasting a lot of time and resources on this "false positive" hit.<p/>
 <p>But let first have a look at the good ones, based on a paper published in 2014, CHEMICAL NEWS
 The Most Common Heterocycles in Drugs, published in Science, by Derek Lowe, the top heterocycles appeared in FDA approved drugs are list as the next image, from left to right, up to bottom.</p>
+
 
 <a href="#">
             <img class="img-fluid" src="img/blog5.1.png" alt="">
@@ -94,13 +94,15 @@ The Most Common Heterocycles in Drugs, published in Science, by Derek Lowe, the 
             <img class="img-fluid" src="img/blog5.3.png" alt="">
             </a>
 
-<p>If you want to know if a cetain compound of your interst is a PAINS compound, you could try https://www.cbligand.org/, but please be advised that the algorithun for
-filtering out PAINS in an ongoing program, there might be better web or software to do the similar thing. And always remember, the result is just an suggestion, you need to make your own desicion to accept the result or not, after all, if you put some FDA drug, some algorithum gives you a PAIN as well.
+
+<p>If you want to know if a certain compound of your interest is a PAINS compound, you could try https://www.cbligand.org/, but please be advised that the algorithm for
+filtering out PAINS in an ongoing program, there might be better web or software to do the similar thing. And always remember, the result is just a suggestion, you need to make your decision to accept the result or not, after all, if you put some FDA drug, some algorithms give you a PAIN as well.
 "A small proportion (ca. 5%) of FDA-approved drugs contain PAINS-recognized substructures, these comprising both natural products and synthetic drugs"—— ACS Chem Biol. 2018 Jan 19; 13(1): 36–44.</p>
 
 <p>Several excellent articles can be read if you would more about PAINS, one is as above, the other is a blog from Derek Lowe again.  https://blogs.sciencemag.org/pipeline/archives/2010/02/08/polluting_the_literature_with_pains
 
-And the relatied article the bolg has refered to, https://pubs.acs.org/doi/abs/10.1021/jm901137j</p>
+And the related article the blog has referred to, https://pubs.acs.org/doi/abs/10.1021/jm901137j</p>
+
 </p>
      
           </a>
