--- a/post3.html
+++ b/post3.html
@@ -75,7 +75,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-          <p>Two simple stereochemistry drawing tips are provided here. You will be surprised how easy it is to apply these methods drawingthe same molecule in so many ways!The next image shows many molecules, they all to mean the same L-lysine. By appling two tips called CBP and GSR, you can do this easily too.<p/>
+         <p>Two simple stereochemistry drawing tips are provided here. You will be surprised how easy it is to apply these methods drawing the same molecule in so many ways! The next image shows many molecules, they all mean the same L-lysine. By applying two tips called CBP and GSR, you can do this easily too.<p/>
 
 
 <a href="#">
@@ -86,7 +86,7 @@
             <img class="img-fluid" src="img/chiral2.png" alt="">
             </a>
 
-<p>Though the chiral center of carbon 2 in last image keeps all the time, 3 position changed acturally, so you should be careful if two chiral center are adjacent when using CBP and GSR. </p>
+<p>Though the chiral center of carbon 2 in the last image keeps all the time, 3 positions changed actually, so you should be careful if two chiral centers are adjacent when using CBP and GSR. </p>
 
 
 
