--- a/post6.html
+++ b/post6.html
@@ -112,10 +112,15 @@ Delete the old structures in time.
             </a>
  Sever <a href="http://zarbi.chem.yale.edu/ligpargen/index.html">LigParGen</a> is a web-based service that provides force field (FF) parameters for organic molecules or ligands, offered by the Jorgensen group.
 
+<a href="#">
+            <img class="img-fluid" src="img/ligpargen.png" alt="">
+            </a>
+ Sever <a href="http://zarbi.chem.yale.edu/ligpargen/index.html">LigParGen</a> is a web-based service that provides force field (FF) parameters for organic molecules or ligands, offered by the Jorgensen group.
+
 <p>Upload XLC.pdb to LigParGen, > submit > download *.rtf and *.prm for charm/namd<p/>
 Upload XLD.pdb, do the same thing.
 
-<p>Note since the NAMD default charmm force field can recognize all amino acid, there is no need to upload protein.pdb.<p/>
+<p>Note since the NAMD default charmm force field can recognize all amino acids, there is no need to upload protein.pdb.<p/>
 
 <h2>Step3 :Upload output files from LigParGen to Feprepare</h2> <a href="https://feprepare.vi-seem.eu/">Feprepare</a>
 
@@ -133,34 +138,35 @@ Download the output files as files.zip.<p/>
 <p>$: cd complex/</p> 
 <p>$: ls</p>
 
+
 <p>There are two branch legs, namely the "complex" and "solvent" branch, we are going to calculate the free energy changee for both of them, now we are in "complex" folder.<p/>
 
 <a href="#">
             <img class="img-fluid" src="img/two-legs.png" alt="">
             </a>
 
-<h2>Step 5:	Modify NAMD configuration file or .namd file.</h2>
+<h2>Step 5: Modify NAMD configuration file or .namd file.</h2>
 
-<p>Now it is time to modify the NAMD configuration file, since there seem incomplete parameters listed by Feprepare Sever. Caution! This part is tricky. Though there are already some configuration file existed in current folder but they are found incomplete or some other tiny errors. Please double check the three following things.<p/>
+<p>Now it is time to modify the NAMD configuration file since there seem incomplete parameters listed by Feprepare Sever. Caution! This part is tricky. Though there is already some configuration file existed in the current folder but they are found incomplete or some other tiny errors. Please double-check the three following things.<p/>
 
 <h3>First</h3> 
-more parameter files need to be added to the nvt_equill.namd/npt_equil.namd as well as the md_forward.namd. Here I just copy a whole pack of parameter files originally from Charmm-Gui > Input generator > relative ligand binder. What need to be done is copy the so called “ toppar” file from Charm-gui and put it in /srv/scratch/myfolder. Make sure this path is properly defined in the *namd file. 
+more parameter files need to be added to the nvt_equill.namd/npt_equil.namd as well as the md_forward.namd. Here I just copy a whole pack of parameter files originally from Charmm-Gui > Input generator > relative ligand binder. What needs to be done is copy the so-called “ toppar” file from Charm-GUI and put it in /srv/scratch/myfolder. Make sure this path is properly defined in the *namd file. 
 
 <h3>Second</h3>
 add the ‘updated.prm" as well in the "parameter" list as well, ohterwise there will be an error "XXX.atom unrecognized" happening.
 
 <h3>Third</h3>
- Also make sure your “toppar” folder contains this modified “water_ions.mod.str” otherwise another infamous atom type OT not found will find you !!!
+ Also, make sure your “toppar” folder contains this modified “water_ions.mod.str” otherwise another infamous atom type OT not found will find you !!!
 
 
-<p>Note it was found there might be a key mistake from the default *.namd file from Feprepare, that is the default value for "alchfille" was ionzed.fep, but I have found the ionzed.fep B column actually was not defining the -1 and 1 beta for those atoms need to be perturbated, while the ionzed_comple.fep should be the right one. If you want to know more, the Feprpare manual should be read.<p/>
+<p>Note it was found there might be a key mistake from the default *.namd file from Feprepare, that is the default value for "alchfille" was ionized.fep, but I have found the ionized.fep B column was not defining the -1 and 1 beta for those atoms need to be perturbated, while the ionzed_comple.fep should be the right one. If you want to know more, the Feprpare manual should be read.<p/>
 
-Last, remember, you don’t need to set any lambda at this equilibrate stage, set them all to 0.0, 0.0, 0.0 . 
+Last, remember, you don’t need to set any lambda at this equilibrate stage, set them all to 0.0, 0.0, 0.0. 
 
  <h2>Step 6: Module load and run the scripts one by one.</h2>
  
- <p>The complex leg will need 3 runs, the first beding a NVT, the second beding a NPT with the third beding a NPT production.
- So is the same as the solvent leg, that is to say, in total we are going to run 6 time, to get the final fep result.
+ <p>The complex leg will need 3 runs, the first being an NVT, the second being an NPT with the third being an NPT production.
+ So is the same as the solvent leg, that is to say, in total we are going to run 6 times, to get the final fep result.
  It is assumed your remote cluster has NAMD/2.13-mpi installed.<p/>
  
  Type the following commands in order, for the purpose of debugg we are going to run the command in an interactive manner. (The following commands only applies under <a href="https://www.msi.umn.edu/content/job-submission-and-scheduling-pbs-scripts#:~:text=The%20queuing%20system%20which%20MSI%20uses%20is%20called,well%20as%20the%20commands%20for%20executing%20the%20calculation">PBS</a>, we used qsub to submit a job request for 32CPUs for 10 hours)
@@ -170,14 +176,15 @@ Last, remember, you don’t need to set any lambda at this equilibrate stage, se
 <p>$ module load intel/18…  openmpi/3.1.2-intel namd/2.13-mpi</p> 
 (you need double check the preconditions for namd/2.13-mpi, it varies)
 
-<p>Now the software and it's running box has been loaded, let's begin with the real simulation. note you should change the running steps a relative small number to let the simulation finish in a reasonable time scale. I recommand you just run 500 or 5000 steps for the first time.<p/>
+<p>Now the software and it's running box has been loaded, let's begin with the real simulation. note you should change the running steps to a relatively small number to let the simulation finish on a reasonable time scale. I recommend you just run 500 or 5000 steps for the first time.<p/>
 
-<p>$mpirun –oversubscribe -np 4 /apps/namd/2.13-mpi/arch/Linux-x86_64-icc/namd2 +ppn 7 nvt_equil_modifiled.namd > nvt_equil.out.<p/> 
+<p>$mpirun –oversubscribe -np 4 /apps/namd/2.13-mpi/arch/Linux-x86_64-icc/namd2 +ppn 7 nvt_equil_modifiled.namd > nvt_equil.out.<p/>
+
         
             <p> (If you want to know what"--oversubscribe" does here, read more on  <a href="https://stackoverflow.com/questions/64584900/why-is-oversubscribe-necessary-for-openmpi-when-repeatedly-spawning-new-proces">Why oversubscribe necessary</a> and for changing it to another argument, potentially read
     <a href="https://www.open-mpi.org/faq/?category=running#oversubscribing"> Can I oversubscribe nodes?</a>) <p/>
 
-the above command is tricky as well, do the math carefully, we defined the -np as 4, and defined the +ppn as 7, so 4*7=28, each np require an extra CPU for communication so, in total we applied 28+4=32. After finish, three outputs shoule be found
+the above command is tricky as well, do the math carefully, we defined the -np as 4, and defined the +ppn as 7, so 4*7=28, each np require an extra CPU for communication so, in total, we applied 28+4=32. After finish,three outputs shoule be found
               <p>nvt_equil.coor</p>
               <p>nvt_equil.vel</p>
               <p>nvt_equi.xsc</p>
@@ -199,15 +206,15 @@ Please note the "Source ../fel.tcl" is turned off, you need to turn it on and ch
 
 <h2>Step 7: Comparation with the experimental number.
 </h2>
-<p>As mentioned above, there are two branch or legs to be calculated: complex and solven
-The calculated complex is around 46, while solvent is around 50, so the binding free energy difference is around -4 kcal/mol. Since this is a relatively short simulation, the result is expected to be closer to -2.9 kcal/mol when time is extended. <p/>
-To be summarized, you need to go to “complex” to run the three-step simulation one by one, namely, the nvt_equil_modified.namd, npt_equil.namd and md_forward.namd, which correspond to NVT, NPT and PRODUCTION stages respectively. 
+<p>As mentioned above, there are two branch or legs to be calculated: complex and solvent
+The calculated complex is around 46, while the solvent is around 50, so the binding free energy difference is around -4 kcal/mol. Since this is a relatively short simulation, the result is expected to be closer to -2.9 kcal/mol when time is extended. <p/>
+To be summarized, you need to go to “complex” to run the three-step simulation one by one, namely, the nvt_equil_modified.namd, npt_equil.namd and md_forward.namd, which correspond to NVT, NPT, and PRODUCTION stages respectively.
 
 <a href="#">
             <img class="img-fluid" src="img/three-steps.png" alt="">
             </a>
 
-Then you need to go to “solvent”, do the same procedure as in “complex”. An error has been noticed, which is warning that the original water box is too small and the simulation aborted. In this case, it is recommended you open the npt_equil.namd and increase the “margin” from the default value 1 to 10 and try it again, so is the same for md_forward_1.namd if the same error shows up. During the NVT stage, it is unlikely to show this error. 
+Then you need to go to “solvent”, do the same procedure as in “complex”. An error has been noticed, which is a warning that the original water box is too small and the simulation aborted. In this case, it is recommended you open the npt_equil.namd and increase the “margin” from the default value 1 to 10 and try it again, so is the same for md_forward_1.namd if the same error shows up. During the NVT stage, it is unlikely to show this error.
 
 <a href="#">
             <img class="img-fluid" src="img/xlc-xld.png" alt="">
