--- a/post9.html
+++ b/post9.html
@@ -76,7 +76,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-          <p> The carbonyl group, is a perfect electrophile, in this case, it is recognized as a partially positively charged group. But from some retrosynthetic plan, people found they already had a electrophile thus requring the acyl group acting like a anion which need to be partially negatively charged. A common way to do this is taking TMSCN as a masking group by addition to the acyl group, which can then be deprotonated, serving as a negatively charged necleophile instead of electrophile.
+          <p> The carbonyl group, is a perfect electrophile, in this case, it is recognized as a partially positively charged group. But from some retrosynthetic plan, people found they already had an electrophile thus requiring the acyl group to act like an anion that needs to be partially negatively charged. A common way to do this is taking TMSCN as a masking group by addition to the acyl group, which can then be deprotonated, serving as a negatively charged nucleophile instead of the electrophile.
     <p>
             <a href="#">
             <img class="img-fluid" src="img/post8.0.png" alt="">
