added this web to share knowledge

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
             <h1>Qute Sun</h1>
-            <span class="subheading">Quantao's personal site about chemistry</span>
+            <span class="subheading">Quantao's personal site to share chemistry knowledge</span>
           </div>
         </div>
       </div>
