--- a/post9.html
+++ b/post9.html
@@ -100,7 +100,7 @@
            <p>
             As the above green box shows, we take the TMSCN masked anion as an acyl anion equivalent in practice. The reason why this could work nicely is partly due to the strong electron-withdrawing nature of the CN group, which can stabilize the negative charge after LDA deprotonation.</p>
             <p>
-            This strategy was applied in the total synthesis of (-)-Curvulamine by <a href="http://www.cchem.berkeley.edu/tjm/Lab_website/Home.html">Maimone Group</a> at MIT. We only show part of their synthesis plan involves our topic here.
+            This strategy was applied in the total synthesis of (-)-Curvulamine by <a href="http://www.cchem.berkeley.edu/tjm/Lab_website/Home.html">Maimone Group</a> at UC, Berkeley. We only show part of their synthesis plan involves our topic here.
                 <p><a href="#">
             <img class="img-fluid" src="img/post9.4.png" alt="">
             </a></p>
