mdl file image added

--- a/post1.html
+++ b/post1.html
@@ -105,6 +105,10 @@ Go to DrugBank, type "morphine" and find the 3-D coordinate.
 
 <p>click the download as MOL file, then your computer may be able to download directly as a file, if it shows instead as a web page like below, you could just copy the whole content and paste it to a newly created file called "morphine.mol" (touch morphine.mol), or creat morphine.txt if you use Windows and past it to the txt
 file. <p/>
+<p>
+    <a href="#">
+         <img class="img-fluid" src="img/morphine2.png" alt="">
+    </a></p>
 
 
 <p>Go back to the MaxBridge web site, use browse to upload the morphine.mol file, then click "submit" in the bottom, and wait for 1-5 minites while the calculation happening. <p/>
