a pymol script added

--- a/post10.html
+++ b/post10.html
@@ -181,8 +181,11 @@ Lets type "fetch 7jrn" command, press enter, the protein shows up but as a dimer
             </a></p>
                 <p>6. Click the upright "Draw/Ray" > "Ray", and wait until the imagge show up</p>
                      <p> Save image file to your folder</p>
-                <h2> It's not over! </h2>
-                You properly noticed, the above image is still not perfect, but due to the limitation of this blog, I don't want to go futher to overwhelm people, but starting from the last image, there are a lot new commands we could applied, especially put more emaphsis on the interacction between the small molecule and protein. An example txt file will be attached here, which could be used in your own project, BUT YOU NEED TO CHANGE IT BASED ON YOUE OWN PROTEIN.
+                <h2> Further reading </h2>
+               You properly noticed, the above image is still not perfect, but due to the limitation of this blog, I don't want to go further to overwhelm people, but starting from the last image, there are a lot of new commands we could apply, especially put more emphasis on the interaction between the small molecule and protein. An example picture attached here for those who want further leaning, the example below is no longer based on the coronavirus protein, YOU NEED TO CHANGE IT BASED ON YOUR PROTEIN.
+                <p> <a href="#">
+            <img class="img-fluid" src="img/post10/post10.16.png" alt="">
+            </a></p>
                 
       </div>
     </div>
