--- a/post10.html
+++ b/post10.html
@@ -113,7 +113,7 @@ Lets type "fetch 7jrn" command, press enter, the protein shows up but as a dimer
             There are two chains as above, to obtain a single chain, we just type "remove chain A" or "remove chain B", and press enter. You should now only have one chain left. Alternatively, you could type the following from the very beginning:</p>
             <p>
             set assembly, 1<p/>
-            <p>fetch 3bhv, assembly 1, async=0</p>
+            <p>fetch 7jrn, assembly 1, async=0</p>
             By doing this, you also get a single chain.
                 <p><a href="#">
             <img class="img-fluid" src="img/post10/post10.6.png" alt="">
