--- a/post10.html
+++ b/post10.html
@@ -168,6 +168,7 @@ Lets type "fetch 7jrn" command, press enter, the protein shows up but as a dimer
                 
                 <p>4. Click "Display" > "quality" > reseanable quality</p>
                  <p>5. "Setting" > Transparency > surface > 50%</p>
+               If you only require a general sense of a small molecule bound to a protein, you may just save your image at this step, but if you want more details about the binding site, go ahead with the following.
                 <p>6. Click the A for assembly_1, then click "present" > lignad site> cartoon</p>
                <p> <a href="#">
             <img class="img-fluid" src="img/post10/post10.13.png" alt="">
