--- a/post10.html
+++ b/post10.html
@@ -168,7 +168,7 @@ Lets type "fetch 7jrn" command, press enter, the protein shows up but as a dimer
                 
                 <p>4. Click "Display" > "quality" > reseanable quality</p>
                  <p>5. "Setting" > Transparency > surface > 50%</p>
-               If you only require a general sense of a small molecule bound to a protein, you may just save your image at this step, but if you want more details about the binding site, go ahead with the following.
+               If you only require a general sense of a small molecule bound to a protein, you may just save your image as per step7, but if you want more details about the binding site, go ahead with step 6.
                 <p>6. Click the A for assembly_1, then click "present" > lignad site> cartoon</p>
                <p> <a href="#">
             <img class="img-fluid" src="img/post10/post10.13.png" alt="">
@@ -180,7 +180,7 @@ Lets type "fetch 7jrn" command, press enter, the protein shows up but as a dimer
                 <p> <a href="#">
             <img class="img-fluid" src="img/post10/post10.15.png" alt="">
             </a></p>
-                <p>6. Click the upright "Draw/Ray" > "Ray", and wait until the imagge show up</p>
+                <p>7. Click the upright "Draw/Ray" > "Ray", and wait until the imagge show up</p>
                      <p> Save image file to your folder</p>
                 <h2> Further reading </h2>
                You properly noticed, the above image is still not perfect, but due to the limitation of this blog, I don't want to go further to overwhelm people, but starting from the last image, there are a lot of new commands we could apply, especially put more emphasis on the interaction between the small molecule and protein. An example picture attached here for those who want further leaning, <a href="https://pan.baidu.com/s/1hgrdSs7GYmKkwRHQJ0TCtQ/">the example</a> below is no longer based on the coronavirus protein, YOU NEED TO CHANGE IT BASED ON YOUR PROTEIN.
