--- a/post10.html
+++ b/post10.html
@@ -177,7 +177,7 @@ Lets type "fetch 7jrn" command, press enter, the protein shows up but as a dimer
                 <p style="text-align:center;">> <a href="#">
             <img class="img-fluid" src="img/post10/post10.14.png" alt="">
             </a></p>
-                <p> If we rotate a bit, there are two H-bonds formed between TTT and the coronavirous here as shown in dashed lines.</p>
+                <p> If we rotate a bit, there are two H-bonds formed between TTT and the coronavirous here as shown in yellow dashed lines.</p>
                 <p style="text-align:center;"> <a href="#">
             <img class="img-fluid" src="img/post10/post10.15.png" alt="">
             </a></p>
