--- a/post10.html
+++ b/post10.html
@@ -184,11 +184,12 @@ Lets type "fetch 7jrn" command, press enter, the protein shows up but as a dimer
                 <p>7. Click the upright "Draw/Ray" > "Ray", and wait until the imagge show up</p>
                      <p> Save image file to your folder</p>
                 <h2> Further reading </h2>
-               You properly noticed, the above image is still not perfect, but due to the limitation of this blog, I don't want to go further to overwhelm people, but starting from the last image, there are a lot of new commands we could apply, especially put more emphasis on the interaction between the small molecule and protein. An example picture attached here for those who want further leaning, <a href="https://pan.baidu.com/s/1hgrdSs7GYmKkwRHQJ0TCtQ/"> the example </a> below is no longer based on the coronavirus protein, YOU NEED TO CHANGE IT BASED ON YOUR PROTEIN.
+               You properly noticed, the above image is still not perfect, but due to the limitation of this blog, I don't want to go further to overwhelm people, but starting from the last image, there are a lot of new commands we could apply, especially put more emphasis on the interaction between the small molecule and protein. An example picture attached here for those who want further leaning 
+                <a href="https://pan.baidu.com/s/1hgrdSs7GYmKkwRHQJ0TCtQ/"> (The example) </a> below is no longer based on the coronavirus protein, YOU NEED TO CHANGE IT BASED ON YOUR PROTEIN.
                 <p> <a href="#">
             <img class="img-fluid" src="img/post10/post10.16.png" alt="">
             </a></p>
-              <p> Also, I provide here a <a href="https://pan.baidu.com/s/1GcOARuxlDxI8ZWRDsG-WGQ/"> pymol.sh script</a>  which can be used to write repeated PyMOL scripts .pml, when multiple proteins need to be processed in a high through manner. What you need do is just modify the .sh file a bit, then run this .sh in any terminal, there will be output as .pml file, then run this .pml with PyMOL, multiple proteins will be processed at one time</p>
+              <p> Also, I provide here a <a href="https://pan.baidu.com/s/1PczsmUhuFCsnkYxUG0jvng/"> pymol.sh script</a>  which can be used to write repeated PyMOL scripts .pml, when multiple proteins need to be processed in a high through manner. What you need do is just modify the .sh file a bit, then run this .sh in any terminal, there will be <a href="https://pan.baidu.com/s/1mKoA0VXvyqAqQpj7AET3sA/"> output.pml file</a> then run this .pml with PyMOL, multiple proteins will be processed at one time</p>
                    <p> <a href="#">
             <img class="img-fluid" src="img/post10/post10.17.png" alt="">
             </a></p>
