--- a/post11.html
+++ b/post11.html
@@ -146,7 +146,7 @@
         <p>This a very nice and concise  <a href="http://www.mdtutorials.com/gmx/lysozyme/index.html">tutorial</a> you can follow step by step, so I will not go to the details too much. After you download the protein from PDB bank, you can almost copy the command lines from the "Lysozyme in water" tutorial, and hit enter to run your simulation.</p>
             <p> <span style="background-color: #FFFF00">But just be aware all the *.mdp files need YOU to creat them,.</span>
                 
-                you should pay attention to <span style="background-color: #FFFF00">the RED content like "here" or "this"</span>  when you go throung the "Lysozyme in water" tutorial, copy the content from the RED links, and pate to your *.mdp file <p/>
+                you should pay attention to <span style="background-color: #FFFF00">the RED content like "here" or "this"</span>  when you go throung the "Lysozyme in water" tutorial, copy the content from the RED links, and paste to your *.mdp file <p/>
        
                <p> <h2>Step C. Head to <a href="https://bioinformaticsreview.com/20200609/md-simulation-output-analysis-of-protein-using-gromacs/"> Output analysis</a>  ,do more analysis.</h2> <p/> 
                 <p> In the "Lysozyme in Water" tutorial, you probably already did several analysis, but it may not enough, so I recommend you to use this site to do more analysis like RMSF and H bond networks analysis. </p>
