--- a/post11.html
+++ b/post11.html
@@ -150,7 +150,7 @@
        
                <p> <h2>Step C. Head to <a href="https://bioinformaticsreview.com/20200609/md-simulation-output-analysis-of-protein-using-gromacs/"> Output analysis</a>  ,do more analysis.</h2> <p/> 
                 <p> In the "Lysozyme in Water" tutorial, you probably already did several analysis, but it may not enough, so I recommend you to use this site to do more analysis like RMSF and H bond networks analysis. </p>
-                <p> Please beaware, you can choose other analysis means, but for the sake of this blog, it is good to use the <a href="https://bioinformaticsreview.com/20200609/md-simulation-output-analysis-of-protein-using-gromacs/"> article </a> was put here, it is consistend with the "Lysozyme in water" tutorial, so you can just copy the command line from this site to pate directly to your terminal and run it, just like what you have done in Step B</p>
+                <p> Please beaware, you can choose other analysis means, but for the sake of this blog, it is good to use the <a href="https://bioinformaticsreview.com/20200609/md-simulation-output-analysis-of-protein-using-gromacs/"> article </a> was put here, it is consistend with the "Lysozyme in water" tutorial, so you can just copy the command line from this site to paste directly to your terminal and run it, just like what you have done in Step B</p>
                 <p style="text-align:center;">
             <a href="#">
             <img class="img-fluid" src="img/post11/post11.9.png" alt="">
