--- a/post11.html
+++ b/post11.html
@@ -76,7 +76,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-          <a href="http://www.gromacs.org/"> Gromacs </a>   is a free package designed for biology or chemistry simulation. It is easy for beginners compared to other simulation packages. For best performance, you may want to install it on a cluster, but here I just want to show what a local laptop can do， so the method here may differ from that of cluster installation.
+         <p> <a href="http://www.gromacs.org/"> Gromacs </a>   is a free package designed for the simulation of proteins, nucleic acid and small molecules. It is easy for beginners compared to other simulation packages. For best performance, you may want to install it on a cluster, but here I just want to show what a local laptop can do， so the method here may differ from that of cluster installation.</p>
              <p> <a href="#">
             <img class="img-fluid" src="img/post11/post11.0.png" alt="">
             </a></p>
