--- a/post11.html
+++ b/post11.html
@@ -80,7 +80,7 @@
              <p> <a href="#">
             <img class="img-fluid" src="img/post11/post11.0.png" alt="">
             </a></p>
-            Image from <a href="https://www.google.com.au/search?q=gromacs+logo&sxsrf=ALeKk03W00wqS4I2b1ix4jzXra8PAJ5aQg:1608174534527&tbm=isch&source=iu&ictx=1&fir=O_kGw8iWrMxYYM%252CDudpJEL7ZdRB7M%252C_&vet=1&usg=AI4_-kSdsXOgiz5qehHReqee6AjA7350wg&sa=X&ved=2ahUKEwik3ff-hNTtAhV9wjgGHfjLBKwQ9QF6BAgPEAE&biw=1386&bih=914#imgrc=O_kGw8iWrMxYYM /">  here </a>
+           <p> Image from <a href="https://www.google.com.au/search?q=gromacs+logo&sxsrf=ALeKk03W00wqS4I2b1ix4jzXra8PAJ5aQg:1608174534527&tbm=isch&source=iu&ictx=1&fir=O_kGw8iWrMxYYM%252CDudpJEL7ZdRB7M%252C_&vet=1&usg=AI4_-kSdsXOgiz5qehHReqee6AjA7350wg&sa=X&ved=2ahUKEwik3ff-hNTtAhV9wjgGHfjLBKwQ9QF6BAgPEAE&biw=1386&bih=914#imgrc=O_kGw8iWrMxYYM /">  here </a></p>
             
             <h2> Step A. Download and install Gromacs.</h2>
             
@@ -160,4 +160,4 @@
                 <p>By finishing this, you can get a sense of what Gromacs can do, of course, there is a lot more Gromacs can do, like predicting the protein folding process by a very long time simulation which can only be done by a cluster or supercomputer.</p>
                 <h2> Further Reading </h2>
                 <p> As we mentioned, this blog uses a pure protein without ligand for the sake of saving simulation time and make things easier for learning purposes. More than often, we are interested in a protein-ligand complex, in that case, after finishing the simulation, if we plot out the H-bonding networks between the ligand and protein, the information will be valuable to judge if a certain H-bond is strong or weak, which can help drug-like molecule design.<p/>
-                <p> What's more, there are some excellent implementations you could use like the MMGBSA analysis, which can help to determine how much a certain pocket amino acid contribute to the ligand bind, which may be helpful when you try to design  stronger or weaker binders<p/>
+                <p> What's more, there are some excellent implementations you could use like the MMGBSA analysis, which can help to determine how much a certain pocket amino acid contribute to the ligand bind, which may be helpful when you try to mutant a key amino acid.<p/>
