--- a/post13.htm
+++ b/post13.htm
@@ -848,7 +848,7 @@ class=SpellE>i</span>, is the installation steps,<o:p></o:p></span></p>
 
 <p class=MsoNormal><span lang=EN-US style='font-size:14.0pt;font-family:"Arial",sans-serif'>and
 1-5 is the method to get rid of an error of missing <span class=SpellE>CMake</span>.
-If you don't get any error r<o:p></o:p></span></p>
+If you don't get any error<o:p></o:p></span></p>
 
 <p class=MsoNormal><span lang=EN-US style='font-size:14.0pt;font-family:"Arial",sans-serif'>during
 the compile process, you can skip step1-5, but if you encounter a problem at
