--- a/post13.htm
+++ b/post13.htm
@@ -835,10 +835,10 @@ punctuation'>
 compile</span></h1>
 
 <p class=MsoNormal><span lang=EN-US style='font-size:14.0pt;font-family:"Arial",sans-serif'>This
-is a short tutorial of how to compile Gromacs, a-i, is the installation steps,<o:p></o:p></span></p>
+is a short tutorial of how to compile Gromacs, a-i, are the installation steps,<o:p></o:p></span></p>
 
 <p class=MsoNormal><span lang=EN-US style='font-size:14.0pt;font-family:"Arial",sans-serif'>and
-1-5 is the method to get rid of an error of missing CMake. If you don't get any
+1-5 are the methods to get rid of an error of missing CMake. If you don't get any
 error<o:p></o:p></span></p>
 
 <p class=MsoNormal><span lang=EN-US style='font-size:14.0pt;font-family:"Arial",sans-serif'>during
