--- a/post13.htm
+++ b/post13.htm
@@ -876,7 +876,7 @@ your hardware and internet connection speed.<o:p></o:p></span></p>
 
 <p class=MsoNormal><b><span lang=EN-US style='font-size:14.0pt;font-family:
 "Arial",sans-serif;color:#00B050'>a.<span style='mso-spacerun:yes'>&nbsp;
-</span>tar xfz gromacs-2021-beta3.tar.gz<o:p></o:p></span></b></p>
+</span>tar xzvf gromacs-2021-beta3.tar.gz<o:p></o:p></span></b></p>
 
 <p class=MsoNormal><b><span lang=EN-US style='font-size:14.0pt;font-family:
 "Arial",sans-serif;color:#00B050'>b.<span style='mso-spacerun:yes'>&nbsp;
