--- a/gromacs.htm
+++ b/gromacs.htm
@@ -880,7 +880,7 @@ modified amino acid that not covered by the general force failed.<o:p></o:p></sp
 
 <p class=MsoNormal align=left style='text-align:left'><span lang=EN-US
 style='background:lightgrey;mso-highlight:lightgrey'>&quot;What we do here is
-to use a homology model instead as a cheat to get rid of the problem with<o:p></o:p></span></p>
+to use a homology model instead as a cheat to get rid of the problem,with<o:p></o:p></span></p>
 
 <p class=MsoNormal align=left style='text-align:left'><span lang=EN-US
 style='background:lightgrey;mso-highlight:lightgrey'>swiss-MODELER&quot;. For
@@ -953,7 +953,7 @@ style='mso-spacerun:yes'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&
 <p class=MsoNormal align=left style='text-align:left'><span lang=EN-US
 style='background:lightgrey;mso-highlight:lightgrey'># please set up a function
 in your ~/.<span class=SpellE>bashrc</span>, by adding<o:p></o:p></span></p>
-
+<p> function fetch () {https://files.rcsb.org/download/${1}.pdb} </p>
 <p class=MsoNormal align=left style='text-align:left'><span lang=EN-US
 style='background:lightgrey;mso-highlight:lightgrey'><span
 style='mso-spacerun:yes'>&nbsp;</span><span
