--- a/gromacs.htm
+++ b/gromacs.htm
@@ -1095,7 +1095,7 @@ style='mso-spacerun:yes'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&
 </span># 2.terminal<o:p></o:p></span></p>
 
 <p class=MsoNormal align=left style='text-align:left'><span lang=EN-US
-style='color:#4472C4;mso-themecolor:accent1'>If you don¡¯t have vim, install by <i>sudo
+style='color:#4472C4;mso-themecolor:accent1'>If you don't have vim, install by <i>sudo
 apt install vim.</i></span><i><span lang=EN-US><o:p></o:p></span></i></p>
 
 <p class=MsoNormal align=left style='text-align:left'><span lang=EN-US
@@ -1104,7 +1104,7 @@ style='mso-spacerun:yes'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&
 </span># 3.terminal<o:p></o:p></span></p>
 
 <p class=MsoNormal align=left style='text-align:left'><span lang=EN-US
-style='color:#4472C4;mso-themecolor:accent1'>If you don¡¯t have pymol, install
+style='color:#4472C4;mso-themecolor:accent1'>If you don't have pymol, install
 by <i>sudo apt install pymol.</i></span><i><span lang=EN-US><o:p></o:p></span></i></p>
 
 <p class=MsoNormal align=left style='text-align:left'><span lang=EN-US
