--- a/gromacs.htm
+++ b/gromacs.htm
@@ -967,12 +967,12 @@ lang=EN-US>By Quantao, posted on 29, December 2020.</span></p>
 
 <p class=MsoNormal align=left style='text-align:left'><span lang=EN-US
 style='background:lightgrey;mso-highlight:lightgrey'>#This is a <a href="https://pan.baidu.com/s/157ufQquKq1dSHgR6lA3sAA"> command-line
-assembly(extractoin code four six) </a>  for Gromacs solution simulation of a protein-ligand complex.<o:p></o:p></span></p>
+assembly(extractoin code 9999) </a>  for Gromacs solution simulation of a protein-ligand complex.<o:p></o:p></span></p>
 
 <p class=MsoNormal align=left style='text-align:left'><span lang=EN-US
 style='background:lightgrey;mso-highlight:lightgrey'>This tutorial is based on</span><span
-lang=EN-US style='background:lime;mso-highlight:lime'> &quot;Justin A. Lemkul
-(https://wwww.thelemkullab.com)&quot;<o:p></o:p></span></p>
+lang=EN-US style='background:lime;mso-highlight:lime'> &quot;
+<a href="http://www.mdtutorials.com/gmx/complex/index.html"> Justin A. Lemkul </a>&quot;<o:p></o:p></span></p>
 
 <p class=MsoNormal align=left style='text-align:left'><span lang=EN-US
 style='background:lightgrey;mso-highlight:lightgrey'>but with modification, in
