--- a/gromacs.htm
+++ b/gromacs.htm
@@ -990,7 +990,7 @@ but with modification, with the mind to expand the utility of this tutorial.</sp
 
 <p class=MsoNormal align=left style='text-align:left'><span lang=EN-US>(You
 could download the same tutorial from the above link to look at sublime for a better
-experience if you don¡¯t have sublime yet,</span></p>
+experience if you don't have sublime yet,</span></p>
 
 <p class=MsoNormal align=left style='text-align:left'><span lang=EN-US>You can
 use <i>snap install sublime-text</i> to install)</span></p>
@@ -1022,7 +1022,7 @@ the original tutorial, Avogadro was used to dealing with the small molecule,
 but here we use <span class=SpellE>openbable</span></span></p>
 
 <p class=MsoNormal align=left style='text-align:left'><span lang=EN-US><span
-style='mso-spacerun:yes'>&nbsp;</span>(if you don¡¯t have <span class=SpellE>obabel</span>,
+style='mso-spacerun:yes'>&nbsp;</span>(if you don't have <span class=SpellE>obabel</span>,
 please install by <span class=SpellE><i>sudo</i></span><i> apt install <span
 class=SpellE>openbabel</span></i>) and <span class=SpellE>pymol</span>. </span></p>
 
