--- a/gromacs.htm
+++ b/gromacs.htm
@@ -989,8 +989,8 @@ href="http://www.mdtutorials.com/gmx/complex/index.html">Justin A. Lemkul </a>&q
 but with modification, with the mind to expand the utility of this tutorial.</span></p>
 
 <p class=MsoNormal align=left style='text-align:left'><span lang=EN-US>(You
-could download the same tutorial from the above link to look at sublime for a better
-experience if you don't have sublime yet,</span></p>
+could download the same tutorial from the above link to read in Sublime for a better
+experience if you don't have Sublime yet,</span></p>
 
 <p class=MsoNormal align=left style='text-align:left'><span lang=EN-US>You can
 use <i>snap install sublime-text</i> to install)</span></p>
