--- a/gromacs.htm
+++ b/gromacs.htm
@@ -1009,7 +1009,7 @@ that are not so good, in terms of having</span></p>
 protein backbone or modified amino acid that not covered by the general force
 failed.</span></p>
 
-<p class=MsoNormal align=left style='text-align:left'><span lang=EN-US>&quot;What
+<p class=MsoNormal align=left style='text-align:left'><span lang=EN-US>What
 we do here is to use a homology model instead as a cheat to get rid of the
 problem, with</span></p>
 
