--- a/gromacs.htm
+++ b/gromacs.htm
@@ -1553,8 +1553,8 @@ style='mso-spacerun:yes'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&
 
 <p class=MsoNormal align=left style='text-align:left'><span lang=EN-US
 style='background:aqua;mso-highlight:aqua'>#gromacs will ask you to choose,
-choose 15 </span><span style='background:aqua;mso-highlight:aqua'>£¨<span
-lang=EN-US>SOL</span>£©</span></p>
+choose 15 </span><span style='background:aqua;mso-highlight:aqua'><span
+lang=EN-US>SOL</span></span></p>
 
 <p class=MsoNormal align=left style='text-align:left'><span lang=EN-US
 style='background:lightgrey;mso-highlight:lightgrey'>38. download <span
