--- a/gromacs.htm
+++ b/gromacs.htm
@@ -1007,7 +1007,7 @@ that are not so good, in terms of having</span></p>
 
 <p class=MsoNormal align=left style='text-align:left'><span lang=EN-US>broken
 protein backbone or modified amino acid that not covered by the general force
-failed.</span></p>
+field.</span></p>
 
 <p class=MsoNormal align=left style='text-align:left'><span lang=EN-US>What
 we do here is to use a homology model instead as a cheat to get rid of the
