--- a/gromacs.htm
+++ b/gromacs.htm
@@ -1158,7 +1158,7 @@ style='mso-spacerun:yes'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&
 </span># 6.pymol<o:p></o:p></span></p>
 
 <p class=MsoNormal align=left style='text-align:left'><span lang=EN-US
-style='background:lightgrey;mso-highlight:lightgrey'>7.select so4,peg4,<span
+style='background:lightgrey;mso-highlight:lightgrey'>7.select so4,PEG,<span
 style='mso-spacerun:yes'>&nbsp; </span>#click with the shift to select all other
 co-factors.<span
 style='mso-spacerun:yes'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
