--- a/gromacs.htm
+++ b/gromacs.htm
@@ -1437,8 +1437,8 @@ style='background:lightgrey;mso-highlight:lightgrey'>16. <span class=SpellE>obab
 style='mso-spacerun:yes'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span>#16.terminal<o:p></o:p></span></p>
 
-<p class=MsoNormal align=left style='text-align:left'><span lang=EN-US>#if you
-don</span>¡¯<span lang=EN-US>t open babel, you could install by <span
+<p class=MsoNormal align=left style='text-align:left'>#if you
+don't have open babel, you could install by <span
 class=SpellE><i>sudo</i></span><i> apt install <span class=SpellE>openbabel</span><o:p></o:p></i></span></p>
 
 <p class=MsoNormal align=left style='text-align:left'><span lang=EN-US
