--- a/gromacs.htm
+++ b/gromacs.htm
@@ -1103,7 +1103,7 @@ problem, with</span></p>
 
 <p class=MsoNormal align=left style='text-align:left'><span lang=EN-US>swiss-MODELER&quot;.<span
 style='mso-spacerun:yes'>&nbsp; </span>For detailed information, please look at
-steps 8 and 9.</span></p>
+steps a,b,c,d.</span></p>
 
 <p class=MsoNormal align=left style='text-align:left'><span lang=EN-US>Also, in
 the original tutorial, Avogadro was used to dealing with the small molecule,
