--- a/gromacs.htm
+++ b/gromacs.htm
@@ -1338,7 +1338,7 @@ lang=EN-US style='mso-fareast-font-family:等线;mso-fareast-theme-font:minor-lati
 mso-bidi-font-family:等线;mso-bidi-theme-font:minor-latin;background:silver;
 mso-highlight:silver'><span style='mso-list:Ignore'>c.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span></span></b><![endif]><span lang=EN-US style='background:silver;
-mso-highlight:silver'>followed by deleting the original<o:p></o:p></span></p>
+mso-highlight:silver'>followed by altering the original<o:p></o:p></span></p>
 
 <p class=MsoNormal align=left style='text-align:left'><span lang=EN-US
 style='background:silver;mso-highlight:silver'>protein, save the ligand with
