--- a/gromacs.htm
+++ b/gromacs.htm
@@ -1265,10 +1265,7 @@ Swiss-Modeler, if your protein is<o:p></o:p></span></p>
 
 <p class=MsoNormal align=left style='text-align:left'><span lang=EN-US
 style='color:black;mso-themecolor:text1;background:silver;mso-highlight:silver'>consistent
-with no interruption (there will be a </span><b><span lang=EN-US
-style='color:red;background:silver;mso-highlight:silver'>¨C</span></b><span
-lang=EN-US style='color:black;mso-themecolor:text1;background:silver;
-mso-highlight:silver'> if there is an interruption in <span class=SpellE>Pymol</span>
+with no interruption (there will be a "-" if there is an interruption in <span class=SpellE>Pymol</span>
 sequence) in the sequence, that <o:p></o:p></span></p>
 
 <p class=MsoNormal align=left style='text-align:left'><span lang=EN-US
