--- a/gromacs.htm
+++ b/gromacs.htm
@@ -1327,7 +1327,7 @@ lang=EN-US style='mso-fareast-font-family:等线;mso-fareast-theme-font:minor-lati
 mso-bidi-font-family:等线;mso-bidi-theme-font:minor-latin;background:silver;
 mso-highlight:silver'><span style='mso-list:Ignore'>c.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span></span></b><![endif]><span lang=EN-US style='background:silver;
-mso-highlight:silver'>followed by altering the original<o:p></o:p></span></p>
+mso-highlight:silver'>followed deleting the original<o:p></o:p></span></p>
 
 <p class=MsoNormal align=left style='text-align:left'><span lang=EN-US
 style='background:silver;mso-highlight:silver'>protein, save the ligand with
@@ -1350,7 +1350,7 @@ mso-highlight:silver'>If there is a modified amino acid far away from the
 ligand pocket, like at least 6-7 angstrom away, you could assume that<o:p></o:p></span></p>
 
 <p class=MsoNormal align=left style='text-align:left'><span lang=EN-US
-style='background:silver;mso-highlight:silver'>By deleting this amino acid has
+style='background:silver;mso-highlight:silver'>By altering this amino acid has
 no or little effect on ligand binding. download the *.<span class=SpellE>fasta</span>
 from RCSB and do the same<o:p></o:p></span></p>
 
