--- a/gromacs.htm
+++ b/gromacs.htm
@@ -1994,8 +1994,11 @@ step, a <b>batch mode</b> is preferred, you might <o:p></o:p></span></p>
 style='color:#C55A11;mso-themecolor:accent2;mso-themeshade:191;mso-style-textfill-fill-color:
 #C55A11;mso-style-textfill-fill-themecolor:accent2;mso-style-textfill-fill-alpha:
 100.0%;mso-style-textfill-fill-colortransforms:lumm=75000'>#need to submit a
-PBS or whatever script depending on your queue system. <o:p></o:p></span></p>
-
+PBS or whatever script depending on your queue system. A potential job script might look like the next image. <o:p></o:p></span></p>
+ <p> <a href="#">
+            <img class="img-fluid" src="img/gromacs/gromacs.0.png" alt="">
+            </a></p>
+    
 <p class=MsoNormal align=left style='text-align:left'><span lang=EN-US
 style='color:#C55A11;mso-themecolor:accent2;mso-themeshade:191;mso-style-textfill-fill-color:
 #C55A11;mso-style-textfill-fill-themecolor:accent2;mso-style-textfill-fill-alpha:
