--- a/post14.html
+++ b/post14.html
@@ -366,7 +366,7 @@ Fukuyamaaminesynthesis...............................................243
  Tsuji-Trost allylation...............................................548
 </pre>>
             </P>
-                               <h3> Allylation reactions (2)</h3> 
+                               <h3> Alkylation reactions (2)</h3> 
 <p>
 <pre>
   reaction name                                                 page number
