--- a/post14.html
+++ b/post14.html
@@ -81,7 +81,7 @@
 background, the complex mechanisms and the form without any unification scared too many people even from chemistry
 society.</p>
 
-<p>This blog will try to classify all the name reactions that have been covered by the Jie_Jack_Li Name Reaction published 
+<p>This blog will try to classify all the name reactions that have been covered by the Name Reaction published 
 by Dr. Jie Jack Li in Springer Dordrecht Heidelberg London New York, in 2009, based on the reaction type or the name of
 the reaction. The purpose is to help general readers to have a different angle to access this fantastic book not only in alphabetic order.
 
