--- a/post14.html
+++ b/post14.html
@@ -82,8 +82,8 @@ background, the complex mechanisms and the form without any unification scared t
 society.</p>
 
 <p>This blog will try to classify all the name reactions that have been covered by the Name Reaction published 
-by Dr. Jie Jack Li in Springer Dordrecht Heidelberg London New York, in 2009, based on the reaction type or the name of
-the reaction. The purpose is to help general readers to have a different angle to access this fantastic book not only in alphabetic order.
+by Dr. Jie Jack Li in Springer Dordrecht Heidelberg London New York, in 2009, based on the reaction type or a key word from 
+the reaction name. The purpose is to help general readers to have a different angle to access this fantastic book not only in alphabetic order.
 
 
              <p> <a href="#">
