--- a/post6.html
+++ b/post6.html
@@ -132,11 +132,11 @@ Download the output files as files.zip.<p/>
 
 <p>Fep calculation need a lot computatinal resources, you are supposed to have access to some kind of cluster or super computer which instlalled with NAMD/2.13-mpi. Use SSH command or use SFTP tools like FileZilla to transfer to your remote host. Log into your remonte host<p/> 
 <pre>$ :mkdir fep 
-$: mv files.zip fep
-$: cd fep
+$ mv files.zip fep
+$ cd fep
 $ unzip files.zip
-$: cd complex/ 
-$: ls</pre>
+$ cd complex/ 
+$ ls</pre>
 
 
 <p>There are two branch legs, namely the "complex" and "solvent" branch, we are going to calculate the free energy changee for both of them, now we are in "complex" folder.<p/>
@@ -192,11 +192,11 @@ and they then be put into next run: npt_equil.namd. if you want to know what "--
 
 Now run the NPT equilbration
 
-<p>$mpirun –oversubscribe -np 4 /apps/namd/2.13-mpi/arch/Linux-x86_64-icc/namd2 +ppn 7 npt_equil.namd > npt_equil.out<p/>
+<pre>$ mpirun –oversubscribe -np 4 /apps/namd/2.13-mpi/arch/Linux-x86_64-icc/namd2 +ppn 7 npt_equil.namd > npt_equil.out</pre>
 
 It should be ideal if we still keep lambda as triple 0 and do the equilibrium again. after finish, let us run the last production stage.
 
-<p>$mpirun –oversubscribe -np 4 /apps/namd/2.13-mpi/arch/Linux-x86_64-icc/namd2 +ppn 7 md_forward1.namd > md_forward1.out<p/>
+<pre>$ mpirun –oversubscribe -np 4 /apps/namd/2.13-mpi/arch/Linux-x86_64-icc/namd2 +ppn 7 md_forward1.namd > md_forward1.out</pre>
 
 Please note the "Source ../fel.tcl" is turned off, you need to turn it on and change the md_forward_1.mnamd" to "md_forward_all.namd" by adding the runFEP 0.0 1.0 0.0625, since the original .namd is designed for a single lambda window.
 
