--- a/post4.html
+++ b/post4.html
@@ -92,13 +92,11 @@ Pip is an install tool needed to install the chembl_web_client, so before we cou
 
 My Linux system is Ubuntu 20.04, so the python is python3,  and there is no pip installed yet. Let’s install now as administrator</p>
 
-<p>sudo apt update  (input your password)<p/>
+<pre> $sudo apt update  #input your password
 
-<p>sudo apt install python3-pip (input your password)</p>
+$ sudo apt install python3-pip #input your password
 
-after finish, 
-
-<p>pip3 --version</p>
+$ pip3 --version</pre>
 
 it looks like the next image. 
 <a href="#">
