--- a/gromacs.htm
+++ b/gromacs.htm
@@ -1226,7 +1226,7 @@ in your ~/.<span class=SpellE>bashrc</span>, by adding</span></p>
 
 <p class=MsoNormal align=center style='text-align:center'><span lang=EN-US
 style='color:#4472C4;mso-themecolor:accent1'>function fetch ()
-{https://files.rcsb.org/download/${1}.pdb}<span
+{wget https://files.rcsb.org/download/${1}.pdb}<span
 style='mso-spacerun:yes'>&nbsp;&nbsp; </span></span><span lang=EN-US>to the
 last line.<span style='background:lightgrey;mso-highlight:lightgrey'><o:p></o:p></span></span></p>
 
